2006-09-11 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Added logserver. Socket based server that can receive logmessage.
	  To be used when debugging keypresses, could be a security risk as a keyboard sniffer.
	* Added log_sock call to send logging to logserver
	* Merging ANSI parsing from trunk
	* Parsing escape sequence for up down key in parse_bind
	* Merging bugfix for self_insert of tabs from trunk
	* Add bindable function that prints keybindings

2006-07-13 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Work to get selection between ironpython and cpython to work
	* Some editing works but there are issues with control keys for ironpython

2006-07-04 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* First commit for ironpython. Typing in alphabet works but no special keys.
	
	
2006-04-18 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Added more tests for emacsmode
	* Made changes in lineeditor 
	* Added some new commands for move-selection
	* primitive logging in tests (both vi and emacs) to show what
	  functions are tested
	* winconstants.py are added to remove dependency on win32all
	
2006-04-04 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* started tests for emacsmode and lineeditor
	* assert in lineeditor for point<=len(l_buffer) required changes in vi_mode
	* Changes in history_search_forward and history_search_backward, added tests
	* Added a few more properties to basemode

2006-03-31 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Merged patch from Michael Graz for the vi mode
	* test directory now have a vi_test, should add more tests
	
2006-03-16 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Added vi patch
	* Added visible selection mode to emacs mode

2006-03-16 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Refactored emacs mode

2006-03-12 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Merged changes from trunk 1158:1201